# meter_data

./: README.md  docker-compose.yml
fastapi_microservice/: Dockerfile  README.md  error_code.json  pyproject.toml
fastapi_microservice/src/: app.py  crud.py  db.py  models.py  settings.py
